<resources>
    <string name="app_name">TravelAssistant</string>
    <string name="title_home">Поездка</string>
    <string name="title_cities">Города</string>
    <string name="title_places">Достопримечательности</string>
    <string name="title_favourites">Избранное</string>
    <string name="title_favourites_details">Информация</string>
    <string name="travel_date">Дата поездки</string>
    <string name="flight_number">Номер рейса</string>
    <string name="van_seat_number">Номер вагона и места</string>
    <string name="van_seat_num">Номер места</string>
    <string name="route_to_station">Как добраться до аэропорта/жд станции</string>
    <string name="next">Далее</string>
    <string name="hotel_address">Адрес отеля</string>
    <string name="hotel_phone">Телефон</string>
    <string name="route_to_hotel">Как добраться от аэропорта/жд станции</string>
    <string name="save">Сохранить</string>
    <string name="subway">Станция метро</string>
    <string name="network_error">Не удалось загрузить данные</string>
    <string name="unknown_error">Нет данных для отображения</string>
    <string name="add_item">Добавить элемент багажа</string>
    <string name="to_dest">Туда</string>
    <string name="from_dest">Обратно</string>
    <string name="hotel">Отель</string>
    <string name="luggage">Багаж</string>
    <string name="details">Детали</string>
    <string name="notification">Напоминание о поездке</string>
    <string name="notification_title">Скоро состоится ваша поездка, пора собираться!</string>
    <string name="default_city">Ваш город</string>
    <string name="travel_info">Введите данные вашей поездки:</string>
    <string name="avia">Аэропорт</string>
    <string name="railway">Ж/д вокзал</string>
    <string name="hometown">Из какого Вы города?</string>
    <string name="no_hotel_in_list">Отеля нет в списке, ввести данные.</string>
    <string name="hotel_title">Название отеля</string>
    <string name="schedule">Режим работы:</string>
    <string name="address">Адрес:</string>
    <string name="reload">Перезагрузить</string>
    <string-array name="time">
        <item>не напоминать</item>
        <item>за 3 часа</item>
        <item>за 5 часов</item>
        <item>за 12 часов</item>
        <item>за день</item>
        <item>за 3 дня</item>
    </string-array>
</resources>