<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/travel"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_details"
        android:icon="@drawable/edit"
        android:title="@string/details" />

    <item
        android:id="@+id/navigation_luggage"
        android:icon="@drawable/luggage"
        android:title="@string/luggage" />

    <item
        android:id="@+id/navigation_cities"
        android:icon="@drawable/city"
        android:title="@string/title_cities" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/favourite"
        android:title="@string/title_favourites" />

</menu>