<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".features.travelinfo.presentation.ui.destination.ToDestinationFragment">

    <EditText
        android:id="@+id/dateOfJourney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/travel_date"
        android:importantForAutofill="no"
        android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/flight_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/van_seat_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <EditText
        android:id="@+id/route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:ems="10"
        android:hint="@string/route_to_station"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textSize="@dimen/text_size" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:entries="@array/time" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_layout_margin_top"
        android:text="@string/next" />

</LinearLayout>