<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".features.travelinfo.presentation.ui.destination.HotelFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/hotelAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/hotel_address"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/hotelPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/hotel_phone"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/hotelWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:hint="@string/subway"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/wayToHotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:ems="10"
                android:hint="@string/route_to_hotel"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_layout_margin_top"
                android:text="@string/next" />

        </LinearLayout>

        <include
            android:id="@+id/errorPanel"
            layout="@layout/fragment_error" />

    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>