<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/list_layout_margin"
    android:gravity="center"
    android:visibility="gone">

    <ImageView
        android:id="@+id/error_icon"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin_top"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/error_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/hotel_title"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:drawablePadding="4dp"
        android:hint="@string/hotel_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toTopOf="@id/error_title" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/hotel_location"
        android:drawablePadding="4dp"
        android:hint="@string/hotel_address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/hotel_phone"
        android:drawablePadding="4dp"
        android:hint="@string/hotel_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <EditText
        android:id="@+id/subway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/hotel_subway"
        android:drawablePadding="4dp"
        android:hint="@string/subway"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/wayToHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:ems="10"
        android:hint="@string/route_to_hotel"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="5"
        android:textSize="@dimen/text_size"
        app:layout_constraintTop_toBottomOf="@+id/subway" />

</androidx.constraintlayout.widget.ConstraintLayout>