<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.travelassistant.features.travelinfo.presentation.ui.CitiesListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_cities_list" >
        <action
            android:id="@+id/action_navigation_home_to_toDestinationFragment"
            app:destination="@id/toDestinationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cities"
        android:name="com.example.travelassistant.features.cities.presentation.CitiesFragment"
        android:label="@string/title_cities"
        tools:layout="@layout/fragment_cities" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.travelassistant.features.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/toDestinationFragment"
        android:name="com.example.travelassistant.features.travelinfo.presentation.ui.destination.ToDestinationFragment"
        android:label="fragment_to_destination"
        tools:layout="@layout/fragment_to_destination" >
        <action
            android:id="@+id/action_toDestinationFragment_to_fromDestinationFragment"
            app:destination="@id/fromDestinationFragment" />
        <argument
            android:name="cityId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/fromDestinationFragment"
        android:name="com.example.travelassistant.features.travelinfo.presentation.ui.destination.FromDestinationFragment"
        android:label="FromDestinationFragment" >
        <action
            android:id="@+id/action_fromDestinationFragment_to_hotelFragment"
            app:destination="@id/hotelFragment" />
        <argument
            android:name="cityId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/hotelFragment"
        android:name="com.example.travelassistant.features.travelinfo.presentation.ui.destination.HotelFragment"
        android:label="HotelFragment" >
        <action
            android:id="@+id/action_hotelFragment_to_personalItemsFragment"
            app:destination="@id/personalItemsFragment" />
        <argument
            android:name="cityId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/personalItemsFragment"
        android:name="com.example.travelassistant.features.travelinfo.presentation.ui.destination.PersonalItemsFragment"
        android:label="PersonalItemsFragment" />
</navigation>